# symphony

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK_REPORT.md  Coastfile  Dockerfile.elixir  Dockerfile.rust  GEMINI.md  PLAN.md  PROJECT_ATLAS.md  README.md  WORKFLOW.md  bench-compare.sh  docker-compose.yml  justfile  session-ses_338b.md  session-ses_3397.md  session-ses_33b4.md
.github/workflows/: release.yml  rust-ci.yml  rust-proofs.yml  security.yml
benches/: Cargo.toml
benches/benches/: reducer.rs  state_machine.rs  workspace.rs
benchmarks/: fake_linear_server.py  startup_probe.py
benchmarks/workflows/: common-workflow.md
docs/: elixir-vs-rust-benchmark-2026-03-07.md  elixir-vs-rust-benchmark-2026-03-08.md  elixir-vs-rust.md
e2e/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
e2e/tests/: fixtures.ts  schemas.ts  symphony.e2e.test.ts
elixir/lib/symphony_elixir/: config.ex  orchestrator.ex  status_dashboard.ex  workflow_store.ex  workspace.ex
elixir/lib/symphony_elixir_web/: presenter.ex
elixir/test/symphony_elixir/: core_test.exs  extensions_test.exs  http_state_golden_test.exs  workspace_and_config_test.exs
fixtures/http_state/: benchmark_state_small.json
helm/symphony/: Chart.yaml  README.md  values.yaml
helm/symphony/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
load-tests/: README.md  load-test.js  soak-test.js  spike-test.js  stress-test.js
rust/: CRATE_INTEGRATIONS.md  Cargo.toml  GAPS.md  QA_REPORT.md  README.md  TASKS.md  TESTS_AND_PROOFS_SUMMARY.md  lefthook.yml
rust/.github/workflows/: rust-extended.yml
rust/crates/symphony-agent-protocol/: Cargo.toml  TASKS.md
rust/crates/symphony-agent-protocol/src/: app_server_event.rs  event_extract.rs  event_policy.rs  lib.rs  line_origin.rs  parsed_line.rs  parser.rs  protocol_error.rs  protocol_method.rs  sequence_validator.rs  startup_payload.rs  stderr_line.rs  stream_line_parser.rs
rust/crates/symphony-cli/: Cargo.toml  TASKS.md
rust/crates/symphony-cli/src/: cli_args.rs  lib.rs  main.rs  reload_classification.rs  startup_config.rs  startup_error.rs  terminal_dashboard.rs
rust/crates/symphony-config/: Cargo.toml  TASKS.md
rust/crates/symphony-config/src/: env.rs  error.rs  lib.rs  loader.rs  model.rs  normalize.rs  validate.rs
rust/crates/symphony-domain/: Cargo.toml  TASKS.md
rust/crates/symphony-domain/src/: agent_update.rs  invariants.rs  lib.rs  property_tests.rs
rust/crates/symphony-http/: Cargo.toml  TASKS.md
rust/crates/symphony-http/src/: api_response.rs  http_method.rs  lib.rs  payloads.rs  routes.rs  state_handlers.rs
rust/crates/symphony-observability/: Cargo.toml  TASKS.md
rust/crates/symphony-observability/src/: issue_snapshot.rs  lib.rs  metrics.rs  runtime_snapshot.rs  sanitization.rs  state_snapshot.rs  telemetry.rs
rust/crates/symphony-runtime/: Cargo.toml  TASKS.md
rust/crates/symphony-runtime/src/: lib.rs  worker.rs
rust/crates/symphony-testkit/: Cargo.toml  TASKS.md
rust/crates/symphony-testkit/fixtures/: README.md  invalid_nested.json  snapshot_example.json  test_issues.json
rust/crates/symphony-testkit/src/: clock.rs  config_builders.rs  fake_generators.rs  fakes.rs  fixtures.rs  issue_builders.rs  lib.rs  observability_builders.rs  path_builders.rs  protocol_builders.rs  schedules.rs  timer_queue.rs  trace.rs
rust/crates/symphony-testkit/tests/: conformance_suite.rs  integration_suite.rs  interleavings_suite.rs  reducer_contract_suite.rs  soak_suite.rs
rust/crates/symphony-tracker/: Cargo.toml  TASKS.md
rust/crates/symphony-tracker-linear/: Cargo.toml  TASKS.md
rust/crates/symphony-tracker-linear/src/: graphql.rs  lib.rs
rust/crates/symphony-tracker-linear/tests/: linear_adapter.rs
rust/crates/symphony-tracker/src/: error.rs  issue.rs  lib.rs  state.rs  tracker_client.rs
rust/crates/symphony-workflow/: Cargo.toml  TASKS.md
rust/crates/symphony-workflow/src/: document.rs  error.rs  lib.rs  parser.rs  reload.rs
rust/crates/symphony-workspace/: Cargo.toml  TASKS.md
rust/crates/symphony-workspace/src/: error.rs  hooks.rs  lib.rs  lifecycle.rs
rust/docs/: README.md  TASKS.md  config-examples.md  cutover-checklist.md  deployment.md  monitoring.md  port-status.md  protocol-examples.md  release-gates.md  runbook.md  troubleshooting.md
rust/docs/adr/: 0001-reducer-first-runtime.md  0002-runtime-execution-model.md  0003-adapter-boundary-contract.md  0004-retry-semantics.md  0005-observability-contract.md  0006-secret-handling-and-redaction.md  0007-upgrade-and-cutover-policy.md  TASKS.md
rust/docs/architecture/: TASKS.md  dependencies.md  overview.md
rust/proofs/: TASKS.md
rust/proofs/verus/: README.md  TASKS.md
rust/proofs/verus/reference/: README.md  verus-guide-print.md  verus-upstream-commit.txt
rust/proofs/verus/scripts/: README.md  install-verus.sh  require-proof-updates.sh  run-long-suite.sh  run-proof-checks.sh  sync-verus-guide-print.sh  verify-verus-guide-print.sh
rust/proofs/verus/specs/: agent_update_safety.rs  runtime_full.rs  runtime_quick.rs  session_liveness.rs  workspace_safety.rs
rust/tests/: README.md  TASKS.md
rust/tests/conformance/: README.md  TASKS.md  cli_cases.rs  http_cases.rs  mod.rs  observability_cases.rs  orchestrator_cases.rs  protocol_cases.rs  tracker_cases.rs  workflow_cases.rs  workspace_cases.rs
rust/tests/integration/: concurrent_workers.rs  graceful_shutdown.rs  lifecycle_e2e.rs  mod.rs  retry_exhaustion.rs  workspace_leaks.rs
rust/tests/interleavings/: README.md  TASKS.md  mod.rs
rust/tests/soak/: README.md  TASKS.md  mod.rs
scripts/opencode/: README.md  fanout_retry.sh  install_agents.sh  model-map.env.example  tasks-rust-from-root.tsv
terraform/modules/symphony/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
