[workspace]
members = [
  "crates/symphony-domain",
  "crates/symphony-config",
  "crates/symphony-workflow",
  "crates/symphony-tracker",
  "crates/symphony-tracker-linear",
  "crates/symphony-workspace",
  "crates/symphony-agent-protocol",
  "crates/symphony-runtime",
  "crates/symphony-http",
  "crates/symphony-cli",
  "crates/symphony-observability",
  "crates/symphony-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Symphony Contributors"]
repository = "https://github.com/openai/symphony"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
