[workspace]
members = [
  "crates/symphony-domain",
  "crates/symphony-config",
  "crates/symphony-workflow",
  "crates/symphony-tracker",
  "crates/symphony-tracker-linear",
  "crates/symphony-workspace",
  "crates/symphony-agent-protocol",
  "crates/symphony-runtime",
  "crates/symphony-http",
  "crates/symphony-cli",
  "crates/symphony-observability",
  "crates/symphony-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Symphony Contributors"]
repository = "https://github.com/openai/symphony"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.87"
axum = "0.8.1"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
terminal_size = "0.4.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
im = { version = "15.1.0", features = ["serde"] }
minijinja = "2.8.0"
mockall = "0.13.1"
figment = { version = "0.10.19", features = ["yaml", "env", "toml"] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
retry-policies = "0.5.1"
tracing-opentelemetry = "0.30.0"
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
fake = { version = "4.0.0", features = ["chrono", "uuid"] }
 governor = "0.8.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.15.1", features = ["v4"] }
serde_yaml = "0.9.33"
wiremock = "0.6.2"
proptest = "1.6.0"
tempfile = "3.18.0"
which = "7.0.2"
url = "2.5.4"
percent-encoding = "2.3.1"
