[package]
name = "symphony-agent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
symphony-testkit = { path = "../symphony-testkit" }

[[test]]
name = "protocol_conformance"
path = "../../tests/conformance/protocol_cases.rs"
