[package]
name = "symphony-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
symphony-testkit = { path = "../symphony-testkit" }

[[test]]
name = "cli_conformance"
path = "../../tests/conformance/cli_cases.rs"
