[package]
name = "symphony-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
percent-encoding.workspace = true
serde_json.workspace = true
symphony-observability = { path = "../symphony-observability" }
symphony-workspace = { path = "../symphony-workspace" }

[dev-dependencies]
symphony-testkit = { path = "../symphony-testkit" }

[[test]]
name = "http_conformance"
path = "../../tests/conformance/http_cases.rs"
