[package]
name = "symphony-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
serde.workspace = true
serde_json.workspace = true
symphony-domain = { path = "../symphony-domain" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
