[package]
name = "symphony-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
symphony-domain = { path = "../symphony-domain" }
symphony-tracker = { path = "../symphony-tracker" }
symphony-observability = { path = "../symphony-observability" }

[dev-dependencies]
async-trait.workspace = true
