[package]
name = "symphony-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
symphony-domain = { path = "../symphony-domain" }
symphony-tracker = { path = "../symphony-tracker" }
symphony-observability = { path = "../symphony-observability" }
symphony-agent-protocol = { path = "../symphony-agent-protocol" }
symphony-workspace = { path = "../symphony-workspace" }
symphony-workflow = { path = "../symphony-workflow" }
symphony-config = { path = "../symphony-config" }
async-trait = "0.1.80"
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
