[package]
name = "symphony-tracker-linear"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
symphony-tracker = { path = "../symphony-tracker" }
symphony-domain = { path = "../symphony-domain" }

[dev-dependencies]
tokio.workspace = true
