[package]
name = "symphony-tracker-linear"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
governor.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
symphony-tracker = { path = "../symphony-tracker" }
symphony-domain = { path = "../symphony-domain" }
tokio.workspace = true

[dev-dependencies]
wiremock.workspace = true
